test/ui/tests/lowering/typed-holes-unsupported.stderr
error: typed holes not supported yet
 --> ${TEST_FOLDER}/lowering/typed-holes-unsupported.lushui:3:10
  |
3 | meaning: ?Hole = ?hole
  |          ^^^^^ 
  |

error: typed holes not supported yet
 --> ${TEST_FOLDER}/lowering/typed-holes-unsupported.lushui:3:18
  |
3 | meaning: ?Hole = ?hole
  |                  ^^^^^ 
  |

error: aborting due to 2 previous errors

